--- a/project.config.json
+++ b/project.config.json
@@ -13,12 +13,14 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.2",
-	"appid": "wx32fb4eb7742a8a6e",
+	"appid": "wxda325a054dd4e76b",
 	"projectname": "wqs-slider",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
 	"isGameTourist": false,
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
